<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="activity.AuthActivity">

    <!-- Login progress -->

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                android:textColor="@color/blackTextColor"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/blackTextColor"
                    android:popupBackground="@color/colorPrimaryDark"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                    android:textColor="@color/blackTextColor"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="Войти"
                    android:background="#6200EA"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"/>

            <Button android:id="@+id/btn_link_signup_occupant"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Регистрация для жильцов"
                    android:background="@null"
                    android:layout_marginTop="3dp"
                    android:textColor="@android:color/black"/>

            <Button android:id="@+id/btn_link_signup_employee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Регистрация для сотрудников"
                android:background="@null"
                android:layout_marginTop="3dp"
                android:textColor="@android:color/black"/>

            <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>